Fix missing SSL endpoint